--- a/SPOTIFYCLONE/style.css
+++ b/SPOTIFYCLONE/style.css
@@ -18,6 +18,7 @@ body{
     
     width: 75vw;
     background-color: #121212;
+    position: relative;
     /* overflow: auto; */
     
     
@@ -278,17 +279,93 @@ body{
 }
 
 .playbar{
-    position: fixed;
+    position: absolute;
     width: 90%;
-    background-color: black;
+    
+    background-color: white;
+
     margin-right: 20px;
+    height: 40px;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
-.card svg{
-    position:absolute;
-    top: px;
+.card svg {
+    position: absolute;
+    bottom: 10px;
+    /* display: none; */
+    opacity: 0;
+    left: 130px;
+    width: 50px;
+    transition: all ease-out 0.3s;
 
+  }
+
+
+.card svg:hover{
+    opacity: 1;
+    position: absolute;
+    bottom: 73px;
+    left: 130px;
+    width: 50px;
     
+  }
+
+
+.songbutton{
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+}
+
+
+.songList{
+    flex-direction: column;
+    padding: 7px;
+    padding-top: 20px;
+    gap: 20px;
+   
+}
+
+.songList ul li{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 20px;
+}
+
+.songcard{
+    flex-direction: row;
+    /* justify-content: space-between; */
+    align-items: center;
+    gap: 40px;
+    border-radius: 8px;
+    height: 70px;
+    border: #b1aeae solid 2px;
+    padding: 5px;
+    /* width: 10px; */
+
+
+}
+
+.songdetails{
+    flex-direction: column;
+
+}
+
+.songonedetail{
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.playsong{
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
