--- a/SPOTIFYCLONE/style.css
+++ b/SPOTIFYCLONE/style.css
@@ -159,7 +159,8 @@ body{
 .librarysection{
     background-color: #121212;
     padding: 25px;
-    min-height: 80vh;
+    height: 500px;
+    overflow-x: scroll;
 
     
 
@@ -206,6 +207,7 @@ body{
 
 .spotifyplaylist{
 
+    overflow: scroll;
     /* height: 100vh; */
     background-color: #121212;
     height: 95vh;
@@ -279,15 +281,18 @@ body{
 }
 
 .playbar{
-    position: absolute;
-    width: 90%;
-    
+    position: fixed;
+    width: 70vw;
+    margin-bottom: 30px;
     background-color: white;
+    border-radius: 20px;
 
     margin-right: 20px;
-    height: 40px;
+    height: 65px;
     bottom: 0;
     display: flex;
+    /* flex-direction: column;
+    gap: 1px; */
     align-items: center;
     justify-content: center;
 
@@ -319,6 +324,7 @@ body{
     justify-content: center;
     gap: 10px;
     align-items: center;
+    margin-top: -20px;
 }
 
 
@@ -327,6 +333,7 @@ body{
     padding: 7px;
     padding-top: 20px;
     gap: 20px;
+    margin-bottom: 4px;
    
 }
 
@@ -338,11 +345,15 @@ body{
     gap: 20px;
 }
 
+.songList{
+overflow-x: scroll;
+}
+
 .songcard{
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
     border-radius: 8px;
     height: 70px;
     border: #b1aeae solid 2px;
@@ -368,4 +379,27 @@ body{
     gap: 10px;
     justify-content: center;
     align-items: center;
+}
+
+.seekbar{
+    width: 98%;
+    /* background-color: red; */
+    height: 2px;
+    border: 2px solid black;
+    position: absolute;
+    bottom: 0px;
+    margin-bottom:17px ;
+
+}
+
+.circle{
+    width: 13px;
+    height: 13px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -6px;
+    left:0%;
+    transition: left 0.5s;
+
 }
